<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
>

    <TextView
        android:id="@+id/mainInclusionPatternLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_inclusion_pattern_label"
        android:layout_gravity="center"
    />

    <EditText
        android:id="@+id/mainInclusionPattern"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/main_inclusion_pattern_init"
    />

    <TextView
        android:id="@+id/mainExclusionPatternLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_exclusion_pattern_label"
        android:layout_gravity="center"
    />

    <EditText
        android:id="@+id/mainExclusionPattern"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/main_exclusion_pattern_init"
    />

    <Button
        android:id="@+id/mainSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_search"
        android:layout_gravity="center"
    />

</LinearLayout>
